[gd_scene load_steps=5 format=3 uid="uid://qctten1dbard"]

[ext_resource type="PackedScene" uid="uid://d1uk0utxa7nyl" path="res://scenes/health_bar/health_bar.tscn" id="1_1i64n"]
[ext_resource type="Script" uid="uid://cjxpygctud3qh" path="res://scenes/game_ui/game_ui.gd" id="1_najyh"]
[ext_resource type="LabelSettings" uid="uid://beeuh4lxlf4dy" path="res://resources/lg_white_32.tres" id="2_najyh"]
[ext_resource type="AudioStream" uid="uid://boct87hp6wlp1" path="res://assets/sounds/power_ups/health_16.wav" id="4_2cwxn"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_najyh")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 48)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.25098, 0.0588235, 0.505882, 0.196078)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 0

[node name="HealthBar" parent="ColorRect/MarginContainer" instance=ExtResource("1_1i64n")]
custom_minimum_size = Vector2(128, 18)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="ScoreLabel" type="Label" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "00000"
label_settings = ExtResource("2_najyh")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2cwxn")

[connection signal="died" from="ColorRect/MarginContainer/HealthBar" to="." method="_on_health_bar_died"]
